1999-06-10  Alex Lancaster  <alex@santafe.edu>

	* Makefile.tests.in (OBJCFLAGS): Add -D macros for APPNAME (get
	from applying $basename to the current target $(@)), BUGADDRESS is
	`bug-swarm@santafe.edu', APPVERSION = current package version.

1999-06-09  Alex Lancaster  <alex@santafe.edu>

	* Makefile.appl.in (CFLAGS): Add -D defined macros to existing
	CFLAGS, for APPNAME, BUGADDRESS and APPVERSION which are passed to
	the initSwarm call in simtools.h at compile time.  
	(_APPVERSION): Add logic to set the #define to NULL, in the case it
	is not defined in the user Makefile, or set it to the user defined
	one, in the case it is set.
	(_BUGADDRESS): Likewise.

1999-06-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.common.in: Don't be particular about the value
	of USESTATIC, just so it is non-empty.

1999-06-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.common (SWARMLIBS): Use -lobjcdll with -lswarmdll.

	* Makefile.appl.in (LDFLAGS): Move EXTRALDFLAGS here (from
	SUPPORTLDFLAGS).

	* Makefile.rules (.m.o): Add EXTRACPPFLAGS and CPPFLAGS.

	* Makefile.common.in (OBJCLIBS): Append -DDLL flag in the case
	of DLLs sans static.
	(EXTRACPPFLAGS): New variable.

	* Makefile.tests.in (SWARMBUILDLDFLAGS): Revert last change.

	* Makefile.common.in (SWARMLIBS): Return to using -lswarm.
	(OBJCLIBS): Remove in DLL case.

1999-06-07  Alex Lancaster  <alex@santafe.edu>

	* Makefile.tests.in (SWARMBUILDLDFLAGS): If $(USEDLL) is set,
	point the linker to the location for -lswarm in the build
	directory, if not set, generate the appropriate flags from the
	list of SWARMMODULES.
	(LIBS): Add $(OBJCLIBS).

1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.common.in (SWARMLIBS, OBJCLIBS): Select -l{swarm,objc}
	or -l{swarm,objc}dll on the basis of USEDLL and USESTATIC.
	(SYSLIBS): Remove OBJCLIBS.

	* Makefile.appl: Use $(OBJCLIBS) instead of -lobjc.

1999-06-03  Alex Lancaster  <alex@santafe.edu>
