@@ -5,17 +5,13 @@ APPEXE = $(APPLICATION)@EXESUFFIX@
 LDFLAGS = $(SWARMLDFLAGS) $(EXTRALDFLAGS)
 
 ifneq ($(APPVERSION),)
-_APPVERSION = -DAPPVERSION=\"$(APPVERSION)\"
-else
-_APPVERSION = -DAPPVERSION=NULL
+_APPVERSION = -DAPPVERSION=$(APPVERSION)
 endif
 ifneq ($(BUGADDRESS),)
-_BUGADDRESS = -DBUGADDRESS=\"$(BUGADDRESS)\"
-else
-_BUGADDRESS = -DBUGADDRESS=NULL
+_BUGADDRESS = -DBUGADDRESS=$(BUGADDRESS)
 endif
 
-CFLAGS += -DAPPNAME=\"$(APPLICATION)\" $(_APPVERSION) $(_BUGADDRESS)
+CPPFLAGS = -DAPPNAME=$(APPLICATION) $(_APPVERSION) $(_BUGADDRESS)
 
 .PHONY: install-config install-data
 
